--- a/RedditSentimentAnalysis.csproj
+++ b/RedditSentimentAnalysis.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="CodingUpAStorm.VaderSharp" Version="1.0.4" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Reddit" Version="1.5.2" />
     <PackageReference Include="System.Reactive" Version="6.0.0" />
   </ItemGroup>
